--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fawn": "^2.1.5",
     "joi": "^13.1.0",
     "joi-objectid": "^2.0.0",
+    "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "mongoose": "^5.0.2"
   }
