--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +20,12 @@
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "mongoose": "^5.0.2"
+  },
+  "devDependencies": {
+    "jest": "^23.4.2"
+  },
+  "jest" : {
+    "verbose" : true,
+    "testURL" : "http://localhost/"
   }
 }
