--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll"
+    "test": "jest --watchAll --verbose"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +25,6 @@
     "jest": "^23.4.2"
   },
   "jest" : {
-    "verbose" : true,
     "testURL" : "http://localhost/"
   }
 }
