--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "mongoose": "^5.0.2"
   },
   "devDependencies": {
-    "jest": "^23.4.2"
+    "jest": "^23.4.2",
+    "supertest": "^3.1.0"
   },
-  "jest" : {
-    "testURL" : "http://localhost/"
+  "jest": {
+    "testURL": "http://localhost/"
   }
 }
