--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll --verbose"
+    "test": "jest --watchAll --verbose",
+    "start" : "node index.js"
+  },
+  "engines" : {
+    "node" : "8.11.3"
   },
   "keywords": [],
   "author": "",
