--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll --verbose",
-    "start" : "node index.js"
+    "start" : "node index.js",
+    "debugthis" : "node --inspect --inspect-brk ./index.js"
   },
   "engines" : {
     "node" : "8.11.3"
