--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "joi-objectid": "^2.0.0",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
-    "mongoose": "^5.0.2"
+    "mongoose": "^5.0.2",
+    "nodemailer": "^4.6.8"
   },
   "devDependencies": {
     "jest": "^23.4.2",
