--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll --verbose",
-    "start" : "node index.js",
-    "debugthis" : "node --inspect --inspect-brk ./index.js"
+    "start": "node index.js",
+    "debugthis": "node --inspect --inspect-brk ./index.js"
   },
-  "engines" : {
-    "node" : "8.11.3"
+  "engines": {
+    "node": "8.11.3"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "mongoose": "^5.0.2",
+    "multer": "^1.3.1",
     "nodemailer": "^4.6.8"
   },
   "devDependencies": {
